fix(ui): avoid content out of boxes

--- a/src/components/Word/Word.css
+++ b/src/components/Word/Word.css
@@ -8,6 +8,7 @@
 
 .word-phonemics {
     margin-top: 10px;
+    font-size: 0.7em;
 }
 
 .word-name {
